re PR c++/23372 (Temporary aggregate copy not elided when passing parameters by value)

2006-01-30  Richard Guenther  <rguenther@suse.de>

	PR c++/23372
	* gimplify.c (gimplify_target_expr): Handle easy cases
	without creating a temporary.

	* gcc.dg/pr23372-1.C: New testcase.

From-SVN: r110396