gcc/testsuite/gcc.dg/pr23372-1.c
@@ -1,0 +1,10 @@
+/* { dg-do compile } */
+/* { dg-options "-Os" } */
+
+struct A {
+  int a[1000];
+};
+void f(struct A);
+void g(struct A *a) { f(*a); }
+
+/* { dg-final { scan-assembler-times "memcpy" 1 } } */
